--- a/index.html
+++ b/index.html
@@ -2,15 +2,35 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Color Quiz</title>
+    <title>Tic Tac Toe</title>
 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
     <script src="https://use.fontawesome.com/b1562c45b0.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
-    <link rel="stylesheet" href="build/build.css">
+    <link rel="stylesheet" href="build/styles.css">
   </head>
   <body>
-    <h1> hi</h1>
+    <main>
+      <h1>Tic Tac Toe</h1>
+
+      <div class="game-container">
+        <div class="row row-1">
+          <div class="square col-1"></div>
+          <div class="square col-2"></div>
+          <div class="square col-3"></div>
+        </div>
+        <div class="row row-2">
+          <div class="square col-1"></div>
+          <div class="square col-2"></div>
+          <div class="square col-3"></div>
+        </div>
+        <div class="row row-3">
+          <div class="square col-1"></div>
+          <div class="square col-2"></div>
+          <div class="square col-3"></div>
+        </div>
+      </div>
+    </main>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="app.js"></script>
