--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 
       <div class="game-container">
         <div class="row row-1">
-          <div class="square col-1"></div>
-          <div class="square col-2"></div>
-          <div class="square col-3"></div>
+          <div class="square js-open-square"></div>
+          <div class="square js-open-square"></div>
+          <div class="square js-open-square"></div>
         </div>
         <div class="row row-2">
-          <div class="square col-1"></div>
-          <div class="square col-2"></div>
-          <div class="square col-3"></div>
+          <div class="square js-open-square"></div>
+          <div class="square js-open-square"></div>
+          <div class="square js-open-square"></div>
         </div>
         <div class="row row-3">
-          <div class="square col-1"></div>
-          <div class="square col-2"></div>
-          <div class="square col-3"></div>
+          <div class="square js-open-square"></div>
+          <div class="square js-open-square"></div>
+          <div class="square js-open-square"></div>
         </div>
       </div>
     </main>
