figuring out the diagonals

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <div class="square js-open-square"></div>
         </div>
       </div>
+      <button class="restart">Clear Board</button>
     </main>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
