--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tic Tac Toe</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
     <script src="https://use.fontawesome.com/b1562c45b0.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
